--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>My Portfolio</title>
     <link rel="icon" type="images/png" href="images/logo512.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a36897a85f.js" crossorigin="anonymous"></script>
@@ -35,7 +35,7 @@
             </nav>
             <div class="header-text animated animatedFadeInUp fadeInUp">
                 <p>Friendly Coder</p>
-                <h1>Hi i'm <span>Baivab</span><br>Sarkar,from India</h1>
+                <h1>Hi i'm <span>Misael</span><br>A.</h1>
             </div>
         </div>
     </div>
@@ -48,13 +48,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>I am a dedicated and enthusiastic developer. I am pursuing B.Tech from JISCE, Kalyani. I have
-                        always been fascinated by technology and its potential to change the world, and that's what led
-                        me to pursue a career in computer science.</p>
-                    <p><br>Apart from academics, if I'm learning or developing anything, I'll be completely focused on
-                        it, even if it takes months. I'm eager to learn about new technologies in the market. I'm a
-                        voracious reader. It could be anything from self-help books to blogs or Twitter threads.</p>
-                    <p><br>In the future, I aspire to become a software developer and contribute to the development of
+                    <p>I am a dedicated and enthusiastic developer. I am pursuing greatness in this area. I have
+                        always been fascinated by all types of technology like Blockchains for example and its potential
+                        to change the world, and that's what led me to start researching about it and teaching myself as much as i could.</p>
+                    <p><br>If I'm Trading or developing anything, I'll be completely focused on
+                        learning something new, even if it takes months. I'm eager to learn about new technologies 
+                        in the market or just anything that takes my interest.</p>
+                    <p><br>In the future, I aspire to become a software and Blockchain developer and contribute to the development of
                         innovative solutions that can make a difference in people's lives.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
