--- a/index.html
+++ b/index.html
@@ -63,23 +63,23 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Python</span><br>Django, BNLP and machine learning.</li>
-                            <li><span>C/C++</span><br>Problem solving and object oriented programming</li>
+                            <li><span>soon</span><br>soon</li>
+                            <li><span>.</span><br>Problem solving and object oriented programming</li>
                             <li><span>Front End Developer</span><br>Building websites using HTML,CSS and JS</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>May 2023 - Jul 2023 <strong>:</strong> Remote</span><br>AI–ML Virtual Internship at <strong>AICTE – NEAT</strong></li>
-                            <li><span>May 2023 <strong>:</strong> On-site</span><br>Artificial Intelligence (AI) Training at <strong>ARDENT COMPUTECH PVT. LTD.</strong></li>
-                            <li><span>Aug 2022 <strong>:</strong> Remote</span><br>Android Application Development Internship at <strong>MTA LEARNING PVT.LTD.</strong></li>
+                            <li><span>soon<strong>:</strong>soon</span><br>soon<strong>soon</strong></li>
+                            <li><span>soon<strong>:</strong>soon</span><br>soon<strong>soon</strong></li>
+                            <li><span>soon<strong>:</strong>soon</span><br>soon<strong>soon</strong></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>Oct 2021 – Expected Aug 2025</span><br>B.Tech on Computer Science from <strong>JIS College of Engineering</strong></li>
-                            <li><span>Jul 2019 – Aug 2021</span><br>12th Grade on Pure Science from <strong>Bandel Vidyamandir High School</strong></li>
-                            <li><span>Jan 2013 – Jun 2019</span><br>10th Grade from <strong>Kanailal Vidyamandir (English Section)</strong></li>
+                            <li><span>soon</span><br>soon<strong>soon</strong></li>
+                            <li><span>soon</span><br>soon<strong>soon</strong></li>
+                            <li><span>soon</span><br>soon<strong>soon</strong></li>
                         </ul>
                     </div>
                 </div>
