--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>I am a dedicated and enthusiastic developer. I am pursuing greatness in this area. I have
-                        always been fascinated by all types of technology like Blockchains for example and its potential
+                        always been fascinated by all types of technology like Blockchain for example and its potential
                         to change the world, and that's what led me to start researching about it and teaching myself as much as i could.</p>
-                    <p><br>If I'm Trading or developing anything, I'll be completely focused on
+                    <p><br>If I'm not Trading or developing anything, I'll be completely focused on
                         learning something new, even if it takes months. I'm eager to learn about new technologies 
                         in the market or just anything that takes my interest.</p>
                     <p><br>In the future, I aspire to become a software and Blockchain developer and contribute to the development of
@@ -63,7 +63,6 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>soon</span><br>soon</li>
                             <li><span>.</span><br>Problem solving and object oriented programming</li>
                             <li><span>Front End Developer</span><br>Building websites using HTML,CSS and JS</li>
                         </ul>
